fix delivery datetime spacing on checkout

--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -57,3 +57,18 @@
 .restaurant-name {
   font-size: 16px;
 }
+
+/* adjust columns to match design */
+.delivery-datetime > .form-group {
+  padding-left: 4px;
+  padding-right: 4px;
+  width: 132px;
+}
+
+.delivery-datetime > .form-group:first-child {
+  margin-left: 11px;
+}
+
+.delivery-datetime .form-group[data-icon^="gb-icon"]:before {
+  margin-top: 28px;
+}
